--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <link rel="stylesheet" href="./style.css"/>
   </head>
   <body>
-    <style> 
+    <style>
       body {
         background: #EEE;
+        margin: 0;
       }
     </style>
     <div id="app"></div>
